Added scripts + general style changes
I added the navigation/footer script, color palette configuration script, cleaned general CSS and ScriptPack from the last project.

--- a/int_resources/pages/test.html
+++ b/int_resources/pages/test.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <!-- Site -->
         <!-- In-page -->
-        <title>Uverit Color Palette</title>
+        <title>test</title>
         <meta name="description" content="Uverit Color Palette - a program designed as a presentation tool for brand style guide.">
         <meta name="keywords" content="color palette, brand style guide, typefaces, fonts, colors, color style, color scheme, brand identity, company colors">
         <meta name="author" content="Uverit">
@@ -55,8 +55,7 @@
 
                 <div class="main-module-content">
                     
-<p>AYAAYAYAYYAfdfsfsdf</p>
-<span>AYAAYAYAYYAfdfsfsdf</span>
+
 
                 </div>
 
