--- a/int_resources/pages/test.html
+++ b/int_resources/pages/test.html
@@ -12,14 +12,14 @@
         <!-- Settings -->
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
-        <link rel="shortcut icon" href="int_resources/img/uverit-favicon-bbg.svg" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="int_resources/css/general.css">
-        <link rel="stylesheet" type="text/css" href="int_resources/css/main.css">
+        <link rel="shortcut icon" href="../img/uverit-favicon-bbg.svg" type="image/x-icon">
+        <link rel="stylesheet" type="text/css" href="../css/general.css">
+        <link rel="stylesheet" type="text/css" href="../css/main.css">
         
         <!-- Scripts -->
-        <script src="int_resources/js/ScriptPackCP.js" defer></script>
-        <script src="int_resources/js/0_config.js"></script>
-        <script src="int_resources/js/navigation.js"></script>
+        <script src="../js/ScriptPackCP.js" defer></script>
+        <script src="../js/0_config.js"></script>
+        <script src="../js/navigation.js"></script>
     </head>
         
     <body>
