--- a/int_resources/pages/ColorChart.html
+++ b/int_resources/pages/ColorChart.html
@@ -75,11 +75,13 @@
                             <circle class="ring rc-item rc-item2"></circle>
                             <circle class="ring rc-item rc-item3"></circle>
                             <circle class="ring rc-item rc-item4"></circle>
+
+                            <circle class="ring load-ring"></circle>
                         </svg>
 
                         <div class="chart-txt">
-                            <h4 class="ratio-txt">AAA</h4>
-                            <h5 class="color-txt">BBBBBBBBBB</h5>
+                            <h3 class="ratio-txt"></h3>
+                            <h4 class="color-txt"></h4>
                         </div>
 
                     </div>
