--- a/int_resources/pages/ColorSaturation.html
+++ b/int_resources/pages/ColorSaturation.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <!-- Site -->
         <!-- In-page -->
-        <title>Uverit Color Tones</title>
+        <title>Uverit Color Saturation</title>
         <meta name="description" content="Uverit Color Palette - a program designed as a presentation tool for brand style guide.">
         <meta name="keywords" content="color palette, brand style guide, typefaces, fonts, colors, color style, color scheme, brand identity, company colors">
         <meta name="author" content="Uverit">
@@ -65,25 +65,25 @@
                         </script>
                     </div>
 
-                    <div class="color-tones">
+                    <div class="color-saturation">
 
                         <div class="color-group">
-                            <h3 class='group-header'>Shades</h3>
+                            <h3 class='group-header'>Vivid</h3>
 
-                            <div class="color-group-inner">
+                            <div class="color-group-inner cgi-vivid">
                                 <div class="group-percentage"></div>
                                 <div class="color-names"></div>
-                                <div class="tone-group color-shades"></div>
+                                <div class="tone-group color-shades color-vivid"></div>
                             </div>
                         </div>
 
                         <div class="color-group">
-                            <h3 class='group-header'>Tints</h3>
+                            <h3 class='group-header'>Muted</h3>
 
                             <div class="color-group-inner">
                                 <div class="group-percentage"></div>
                                 <div class="color-names"></div>
-                                <div class="tone-group color-tints"></div>
+                                <div class="tone-group color-tints color-muted"></div>
                             </div>
                         </div>
 
