--- a/int_resources/pages/ColorLayout.html
+++ b/int_resources/pages/ColorLayout.html
@@ -65,14 +65,16 @@
                         </script>
                     </div>
 
-                    <div class="layout-list pdfNoPrint">
-                        <div class="ll-select">
-                            <p class="current-item"></p>
-                            <div class="ll-select-arrow"></div>
-                        </div>
-                        
-                        <div class="layout-list-inner">
-                            <div class="ll-border"></div>
+                    <div class="ll-parent pdfNoPrint">
+                        <div class="layout-list">
+                            <div class="ll-select">
+                                <p class="current-item"></p>
+                                <div class="ll-select-arrow"></div>
+                            </div>
+                            
+                            <div class="layout-list-inner">
+                                <div class="ll-border"></div>
+                            </div>
                         </div>
                     </div>
 
