--- a/int_resources/pages/ColorLayout.html
+++ b/int_resources/pages/ColorLayout.html
@@ -163,10 +163,8 @@
                                     </div>
 
                                     <div class="lpf-block lpf-block5">
-                                        <p class="lpf-heading">Newsletter</p>
                                         <div class="lp-logo lp-footer-logo"></div>
-
-                                        <input type="text" class="lpf-newsletter">
+                                        <input type="text" class="lpf-newsletter" placeholder="Newsletter">
                                         <p class="lpf-newsletter-btn">Subscribe</p>
                                     </div>
                                     
