--- a/int_resources/pages/ColorLayout.html
+++ b/int_resources/pages/ColorLayout.html
@@ -178,10 +178,18 @@
 
 
                         <div class="layout">
-                            bbbbbbbbbbbbbbbbbbb<br>
-                            bbbbbbbbbbbbbbbbbbb<br>
-                            bbbbbbbbbbbbbbbbbbb<br>
-                            bbbbbbbbbbbbbbbbbbb<br>
+                            <div class="section">
+
+                                <div class="sec-info">
+
+                                </div>
+
+                                <div class="sec-banner">
+                                    <img src="../img/businessman.png" alt="businessman" class="sec-img">
+                                    <div class="sec-overlay"></div>
+                                </div>
+
+                            </div>
                         </div>
 
 
