--- a/int_resources/pages/ColorLayout.html
+++ b/int_resources/pages/ColorLayout.html
@@ -181,7 +181,21 @@
                             <div class="section">
 
                                 <div class="sec-info">
+                                    <p class="si-heading">
+                                        <span>UI</span>
+                                        &nbsp;Design<span>.</span>
+                                    </p>
+                                    <div class="si-border"></div>
+                                    
+                                    <div class="si-txt">
+                                        <p class="si-txt1">Find your own path</p>
+                                        <p class="si-txt2">The digital landscape is constantly evolving, and with it, the expectations of users. Finding your own path towards a successful web design can be the difference between capturing and losing the attention of your target audience. Do you want to know how?</p>
+                                    </div>
 
+                                    <div class="si-buttons">
+                                        <p class="si-btn si-btn1">Get Started</p>
+                                        <p class="si-btn si-btn2">Read More</p>
+                                    </div>
                                 </div>
 
                                 <div class="sec-banner">
@@ -197,43 +211,35 @@
 
 
                         <div class="layout">
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
-                            cccccc-ccc, ccc<br>
+                            <div class="section2">
+
+                                <div class="sec2-main">
+
+                                    <div class="sec2-info">
+                                        <p class="si2-txt1">Find your own path</p>
+                                        <p class="si2-heading"><span>UI</span> Design</p>
+
+                                        <p class="si2-txt2">Finding your own path towards a successful web design can be the difference between capturing and losing the attention of your target audience. Do you want to know how?</p>
+ 
+                                        <p class="si2-btn si2-btn1">Get Started</p>
+                                    </div>
+
+                                    <div class="sec2-banner">
+                                        <img src="../img/girl.png" class="sec2-img" alt="girl">
+                                    </div>
+
+                                    <p class="si2-btn si2-btn2">Get Started</p>
+                                    
+                                </div>
+
+                                <div class="sec2-blob sec2-blob1"></div>
+                                <div class="sec2-blob sec2-blob2"></div>
+                                <div class="sec2-blob sec2-blob3"></div>
+                                <div class="sec2-blob sec2-blob4"></div>
+                                <div class="sec2-blob sec2-blob5"></div>
+                                <div class="sec2-blob sec2-blob6"></div>
+
+                            </div>
                         </div>
 
 
