--- a/int_resources/pages/ColorLayout.html
+++ b/int_resources/pages/ColorLayout.html
@@ -247,19 +247,115 @@
 
 
                         <div class="layout">
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
-                            d dd  d d d d d d  d d<br>
+                            <div class="product-page">
+
+                                <div class="pp-photos">
+
+                                    <div class="pp-photos-min">
+                                        <div class="pp-min">
+                                            <img src="../img/dress1.jpg" class="pp-photo-min current-photo" alt="product image 1">
+                                        </div>
+
+                                        <div class="pp-min">
+                                            <img src="../img/dress2.jpg" class="pp-photo-min" alt="product image 2">
+                                        </div>
+
+                                        <div class="pp-min">
+                                            <img src="../img/dress3.jpg" class="pp-photo-min" alt="product image 3">
+                                        </div>
+
+                                        <div class="pp-min">
+                                            <img src="../img/dress4.jpg" class="pp-photo-min" alt="product image 4">
+                                        </div>
+                                    </div>
+
+                                    <div class="pp-display-photo">
+                                        <img src="" class="pp-photo-big" alt="">
+                                    </div>
+
+                                </div>
+
+                                <div class="pp-info">
+
+                                    <p class="pp-collection">Summer Collection</p>
+                                    <p class="pp-heading">Uverit Strapless Party Dress</p>
+                                    
+                                    <div class="pp-price">
+                                        <p class="pp-price-tag">$189.00</p>
+                                        <p class="pp-old-price">$239.00</p>
+                                        <p class="pp-price-percent">-21%</p>
+                                    </div>
+
+                                    <div class="pp-section pp-colors">
+                                        <p class="pp-section-txt pp-colors-txt">Color - <span class="chosen-color">Black</span></p>
+
+                                        <div class="pp-section-inner pp-colors-inner">
+                                            <div class="pp-color pp-color1 current-color" data-name="black"></div>
+                                            <div class="pp-color pp-color2" data-name="gray"></div>
+                                            <div class="pp-color pp-color3"></div>
+                                            <div class="pp-color pp-color4"></div>
+                                            <div class="pp-color pp-color5"></div>
+                                        </div>
+                                    </div>
+
+                                    <div class="pp-section pp-sizes">
+                                        <p class="pp-section-txt pp-sizes-txt">Size</p>
+
+                                        <div class="pp-section-inner pp-sizes-inner">
+                                            <p class="pp-size pps-stock current-size">XS</p>
+                                            <p class="pp-size pps-stock">S</p>
+                                            <p class="pp-size">M</p>
+                                            <p class="pp-size pps-stock">L</p>
+                                            <p class="pp-size pps-stock">XL</p>
+                                            <p class="pp-size">XXL</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="pp-buy">
+                                        <p class="pp-btn">Add to cart</p>
+
+                                        <div class="pp-cart">
+
+                                            <div class="pp-cart-icon">
+                                                <svg data-name='Layer 2' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'><defs><style>.cls-3{fill:none;stroke-miterlimit:10;}.cls-2{stroke:#1d1d1b;}.cls-3{stroke-linecap:round;}.cls-3{stroke:#009fe3;}</style></defs>
+                                                    <path class='cls-1' d='M58.9,82.7V47.2a41.1,41.1,0,1,1,82.2,0V82.7'/>
+                                                    <path class='cls-2' d='M155.7,55.6a17.1,17.1,0,0,1,17,15.5L182,173.5A18.8,18.8,0,0,1,163.3,194H36.7A18.8,18.8,0,0,1,18,173.5L27.3,71.1a17.1,17.1,0,0,1,17-15.5Z'/>
+                                                </svg>
+                                                <div class="pp-cart-count">2</div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                    
+                                    <div class="pp-delivery">
+                                        <p class="pp-del-txt">Free shipping available for orders over $249!</p>
+                                        <p class="pp-del-link">See more <span>&#10095;</span></p>
+                                    </div>
+
+                                </div>
+
+                            </div>
+                        </div>
+
+
+
+
+
+                        <div class="layout">
+
+
+
+                        </div>
+
+
+
+
+
+                        <div class="layout">
+
+
+
                         </div>
 
                     </div>
