--- a/int_resources/pages/ColorLayout.html
+++ b/int_resources/pages/ColorLayout.html
@@ -434,9 +434,81 @@
 
 
                         <div class="layout">
+                            <div class="social-media">
 
+                                <div class="sm-section sm-section1">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
 
+                                <div class="sm-section sm-section5">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
 
+                                <div class="sm-section sm-section9">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section1 sm-section2">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section5 sm-section6">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section9 sm-section10">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section3">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section7">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section11">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section4">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section7 sm-section8">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                                <div class="sm-section sm-section11 sm-section12">
+                                    <div class="sm-icon sm-icon1"></div>
+                                    <div class="sm-icon sm-icon2"></div>
+                                    <div class="sm-icon sm-icon3"></div>
+                                </div>
+
+                            </div>
                         </div>
 
                     </div>
