--- a/int_resources/pages/CharacterSets.html
+++ b/int_resources/pages/CharacterSets.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <!-- Site -->
         <!-- In-page -->
-        <title>Uverit Type Specimens</title>
+        <title>Uverit Character Sets</title>
         <meta name="description" content="Uverit Color Palette - a program designed as a presentation tool for brand style guide.">
         <meta name="keywords" content="color palette, brand style guide, typefaces, fonts, colors, color style, color scheme, brand identity, company colors">
         <meta name="author" content="Uverit">
@@ -73,12 +73,26 @@
 
                         <div class="tf-section tf-main">
                             <h3 class="tf-heading"></h3>
-                            <div class="specimen"></div>
+
+                            <div class="set">
+                                <div class="child-set alphabet-set"></div>
+                                <div class="set-break"></div>
+                                <div class="child-set number-set"></div>
+                                <div class="set-break"></div>
+                                <div class="child-set special-set"></div>
+                            </div>
                         </div>
 
                         <div class="tf-section tf-secondary">
                             <h3 class="tf-heading"></h3>
-                            <div class="specimen"></div>
+
+                            <div class="set">
+                                <div class="child-set alphabet-set"></div>
+                                <div class="set-break"></div>
+                                <div class="child-set number-set"></div>
+                                <div class="set-break"></div>
+                                <div class="child-set special-set"></div>
+                            </div>
                         </div>
 
                     </div>
